--- a/certifications.html
+++ b/certifications.html
@@ -147,10 +147,10 @@
         </div>
 
         <div class="card">
-            <img src="Prize won certificate/technical student award.jpg" alt="">
+            <img src="amt/technical student award.jpg" alt="">
             <div class="card-content">
                 <h3>BEST technical student award 23 TO 24</h3>
-                <a href="Prize won certificate/technical student award.jpg" class="btn">view certificate</a>
+                <a href="amt/technical student award.jpg" class="btn">view certificate</a>
             </div>
         </div>
 
